@@ -664,7 +664,7 @@
 	"autoblockedtext": "Your IP address has been automatically blocked because it was used by another user, who was blocked by $1.\nThe reason given is:\n\n:<em>$2</em>\n\n* Start of block: $8\n* Expiration of block: $6\n* Intended blockee: $7\n\nYou may contact $1 or one of the other [[{{MediaWiki:Grouppage-sysop}}|administrators]] to discuss the block.\n\nNote that you may not use the \"{{int:emailuser}}\" feature unless you have a valid email address registered in your [[Special:Preferences|user preferences]] and you have not been blocked from using it.\n\nYour current IP address is $3, and the block ID is #$5.\nPlease include all above details in any queries you make.",
 	"systemblockedtext": "Your username or IP address has been automatically blocked by MediaWiki.\nThe reason given is:\n\n:<em>$2</em>\n\n* Start of block: $8\n* Expiration of block: $6\n* Intended blockee: $7\n\nYour current IP address is $3.\nPlease include all above details in any queries you make.",
 	"blockednoreason": "no reason given",
-	"whitelistedittext": "Please $1 to edit pages.",
+	"whitelistedittext": "Please login to edit pages.",
 	"confirmedittext": "You must confirm your email address before editing pages.\nPlease set and validate your email address through your [[Special:Preferences|user preferences]].",
 	"nosuchsectiontitle": "Cannot find section",
 	"nosuchsectiontext": "You tried to edit a section that does not exist.\nIt may have been moved or deleted while you were viewing the page.",
@@ -738,6 +738,7 @@
 	"edittools": "<!-- Text here will be shown below edit and upload forms. -->",
 	"edittools-upload": "-",
 	"nocreatetext": "{{SITENAME}} has restricted the ability to create new pages.\nYou can go back and edit an existing page, or [[Special:UserLogin|log in or create an account]].",
+	"create-nologin-text": "Please login to create new pages.",
 	"nocreate-loggedin": "You do not have permission to create new pages.",
 	"sectioneditnotsupported-title": "Section editing not supported",
 	"sectioneditnotsupported-text": "Section editing is not supported in this page.",
@@ -1569,7 +1570,7 @@
 	"upload-tryagain": "Submit modified file description",
 	"upload-tryagain-nostash": "Submit re-uploaded file and modified description",
 	"uploadnologin": "Not logged in",
-	"uploadnologintext": "Please $1 to upload files.",
+	"uploadnologintext": "Please login to upload files.",
 	"upload_directory_missing": "The upload directory ($1) is missing and could not be created by the webserver.",
 	"upload_directory_read_only": "The upload directory ($1) is not writable by the webserver.",
 	"uploaderror": "Upload error",
